--- a/index.html
+++ b/index.html
@@ -37,18 +37,24 @@
                         <a class="nav-link disabled">Conviertete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success">Comprar tickets</a>
+                        <a class="nav-link text-success fw-bold">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-
-
+    <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative min-vh-100">
+        <div class="header-card fw-bold">
+            <h5 class="fs-2">Conf Bs As</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto aperiam molestiae aspernatur cumque aliquam tempore provident, suscipit ipsam magnam sapiente accusamus non. Quibusdam eos dolores laudantium officiis, unde enim iusto deserunt sequi explicabo, debitis repudiandae natus amet officia nisi.</p>
+            <div>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-success">Comprar ticket</button>
+            </div>
+        </div>
+    </header >
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
