--- a/index.html
+++ b/index.html
@@ -43,18 +43,63 @@
             </div>
         </div>
     </nav>
-    <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative min-vh-100">
+    <header
+        class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative min-vh-100">
         <div class="header-card fw-bold">
             <h5 class="fs-2">Conf Bs As</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto aperiam molestiae aspernatur cumque aliquam tempore provident, suscipit ipsam magnam sapiente accusamus non. Quibusdam eos dolores laudantium officiis, unde enim iusto deserunt sequi explicabo, debitis repudiandae natus amet officia nisi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto aperiam molestiae
+                aspernatur cumque aliquam tempore provident, suscipit ipsam magnam sapiente accusamus non. Quibusdam eos
+                dolores laudantium officiis, unde enim iusto deserunt sequi explicabo, debitis repudiandae natus amet
+                officia nisi.</p>
             <div>
                 <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
                 <button type="button" class="btn btn-success">Comprar ticket</button>
             </div>
         </div>
-    </header >
+    </header>
+    <main>
+        <article class="article-cards d-flex my-5">
+            <div class="row row-cols-5 d-flex justify-content-center">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
+                        <div class="card-body">
+                            <span class="badge text-bg-warning">Javascript</span>
+                            <span class="badge text-light text-bg-info">React</span>
+                            <h5 class="card-title">Bill gatos</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a natus delectus suscipit asperiores nulla.<p/>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/img/steve.jpg" alt="el maldito Bill Gatos">
+                        <div class="card-body">
+                            <span class="badge text-bg-warning">Javascript</span>
+                            <span class="badge text-light text-bg-info">React</span>
+                            <h5 class="card-title">Enemigo de Bill gatos</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatibus alias, officia qui blanditiis hic. Suscipit nisi ad vitae facere laudantium necessitatibus, placeat rerum illum dignissimos? Maiores veritatis quod ipsa!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/img/ada.jpeg" alt="el maldito Bill Gatos">
+                        <div class="card-body">
+                            <span class="badge text-bg-dark">Negocios</span>
+                            <span class="badge text-light text-bg-danger">Startups</span>
+                            <h5 class="card-title">Ada no se que</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eos dolor assumenda pariatur excepturi tempore laudantium soluta, cum expedita itaque.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </article>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
