--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </div>
     </header>
     <main>
-        <article class="article-cards d-flex my-5">
-            <div class="row row-cols-5 d-flex justify-content-center">
+        <article class="article-cards d-flex my-5 p-5">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 d-flex justify-content-center">
                 <div class="col">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
