--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                             <span class="badge text-bg-warning">Javascript</span>
                             <span class="badge text-light text-bg-info">React</span>
                             <h5 class="card-title">Bill gatos</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a natus delectus suscipit asperiores nulla.<p/>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse
+                                fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a
+                                natus delectus suscipit asperiores nulla.
+                                <p />
                         </div>
                     </div>
                 </div>
@@ -78,7 +81,9 @@
                             <span class="badge text-bg-warning">Javascript</span>
                             <span class="badge text-light text-bg-info">React</span>
                             <h5 class="card-title">Enemigo de Bill gatos</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatibus alias, officia qui blanditiis hic. Suscipit nisi ad vitae facere laudantium necessitatibus, placeat rerum illum dignissimos? Maiores veritatis quod ipsa!</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+                                voluptatibus alias, officia qui blanditiis hic. Suscipit nisi ad vitae facere laudantium
+                                necessitatibus, placeat rerum illum dignissimos? Maiores veritatis quod ipsa!</p>
                         </div>
                     </div>
                 </div>
@@ -89,14 +94,31 @@
                             <span class="badge text-bg-dark">Negocios</span>
                             <span class="badge text-light text-bg-danger">Startups</span>
                             <h5 class="card-title">Ada no se que</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eos dolor assumenda pariatur excepturi tempore laudantium soluta, cum expedita itaque.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eos dolor
+                                assumenda pariatur excepturi tempore laudantium soluta, cum expedita itaque.</p>
                         </div>
                     </div>
                 </div>
             </div>
-
         </article>
+        <aside>
+            <section class="d-flex flex-wrap">
+                <img class="banner col-12 col-lg-6" src="./assets/img/honolulu.jpg" alt="hawai">
+                <div class="container-fluid col-12 col-lg-6 p-2 p-md-4 p-lg-5 bg-dark-subtle banner">
+                    <h5 class="fs-3">Bs As - Octubre</h5>
+                    <p class="banner-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+                        doloremque sapiente quasi repudiandae
+                        iure asperiores explicabo possimus dolorem aliquam ullam! Iure esse natus repellendus eos qui
+                        animi saepe sapiente, tenetur optio quidem nam possimus libero porro. Animi neque eligendi
+                        corrupti qui totam quas consectetur nobis? Saepe nisi enim explicabo magnam?</p>
+                    <button class="btn btn-outline-light">Conocé más</button>
+                </div>
+            </section>
+        </aside>
     </main>
+    <footer>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
