--- a/index.html
+++ b/index.html
@@ -116,8 +116,41 @@
             </section>
         </aside>
     </main>
-    <footer>
-
+    <footer class="container-fluid">
+        <section class="row">
+            <div class="col-3"></div>
+            <form class="col-6">
+                <legend>Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar!</legend>
+                <div class="row">
+                    <div class="col-3">
+                        <input type="text" placeholder="Nombre" class="form-control">
+                    </div>
+                    <div class="col-3">
+                        <input type="text" placeholder="Apellido" class="form-control">
+                    </div>
+                    <div class="col-6">
+                        <textarea class="form-control" type="text" placeholder="Sobre que quieres hablar"></textarea>
+                    </div>
+                </div>
+                <div class="row d-flex flex-column">
+                   
+                    <label class="col-6" for="form-label">Recuerda incluir un titulo para tu charla</label>
+                </div>
+                <button class="col-6 btn btn-success">Enviar</button>
+            </form>
+            <div class="col3"></div>
+        </section>
+        <section class="container-fluid">
+            <ul class="links-info">
+                <li><a href="">Preguntas frecuentes</a></li>
+                <li><a href="">Contáctanos</a></li>
+                <li><a href="">Prensa</a></li>
+                <li><a href="">Conferencias</a></li>
+                <li><a href="">Términos y condiciones</a></li>
+                <li><a href="">Privacidad</a></li>
+                <li><a href="">Estudios</a></li>
+            </ul>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
