--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
     </header>
     <main>
-        <article class="article-cards d-flex my-5 p-5">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 d-flex justify-content-center">
-                <div class="col">
+        <article class="article-cards d-flex p-5">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 d-flex justify-content-around">
+                <div class="col col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -70,11 +70,11 @@
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse
                                 fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a
                                 natus delectus suscipit asperiores nulla.
-                                <p />
+                            <p/>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/steve.jpg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/ada.jpeg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -141,7 +141,7 @@
             <div class="col3"></div>
         </section>
         <section class="container-fluid">
-            <ul class="links-info">
+            <ul class="links-info d-flex flex-column">
                 <li><a href="">Preguntas frecuentes</a></li>
                 <li><a href="">Contáctanos</a></li>
                 <li><a href="">Prensa</a></li>
