--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-secondary">
+    <nav class="navbar navbar-expand-lg bg-dark-subtle">
         <div class="container-fluid">
             <a class="nav-brand text-decoration-none" href="#">
                 <img height="70" src="./assets/img/codoacodo.png" alt="codoacodo">
@@ -22,7 +22,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav text-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">La conerencia</a>
@@ -141,7 +141,7 @@
             <div class="col3"></div>
         </section>
         <section class="container-fluid">
-            <ul class="links-info d-flex flex-column">
+            <ul class="links-info d-flex flex-column flex-lg-row">
                 <li><a href="">Preguntas frecuentes</a></li>
                 <li><a href="">Contáctanos</a></li>
                 <li><a href="">Prensa</a></li>
