fix: form padding

--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
     </main>
     <footer class="d-flex flex-column justify-content-between">
         <section class="d-flex my-5 flex-fill">
-            <div class="col-0 col-md-3"></div>
-            <div class="col-12 col-md-6 px-2 d-flex flex-column justify-content-center">
+            <div class="col-0 col-md-3 "></div>
+            <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
                 <legend class="text-center">Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar!</legend>
-                <form>
+                <form class="d-flex flex-column gap-4 ">
                     <div class="row-cols-12 row-cols-md d-md-flex">
-                        <div class="col-md-6">
+                        <div class="col-md-6 px-md-1">
                             <input type="text" placeholder="Nombre" class="form-control">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 px-md-1">
                             <input type="text" placeholder="Apellido" class="form-control">
                         </div>
                     </div>
@@ -141,15 +141,15 @@
             </div>
             <div class="col-0 col-md-3"></div>
         </section>
-        <section class="container-fluid">
-            <ul class="links-info d-flex flex-column flex-lg-row">
-                <li><a href="">Preguntas frecuentes</a></li>
-                <li><a href="">Contáctanos</a></li>
-                <li><a href="">Prensa</a></li>
-                <li><a href="">Conferencias</a></li>
-                <li><a href="">Términos y condiciones</a></li>
-                <li><a href="">Privacidad</a></li>
-                <li><a href="">Estudios</a></li>
+        <section class="container-fluid p-0">
+            <ul class="links-info d-flex flex-wrap gap-1 justify-content-between m-0">
+                <li><a href="#">Preguntas frecuentes</a></li>
+                <li><a href="#">Contáctanos</a></li>
+                <li><a href="#">Prensa</a></li>
+                <li><a href="#">Conferencias</a></li>
+                <li><a href="#">Términos y condiciones</a></li>
+                <li><a href="#">Privacidad</a></li>
+                <li><a href="#">Estudios</a></li>
             </ul>
         </section>
     </footer>
