--- a/index.html
+++ b/index.html
@@ -12,39 +12,38 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark-subtle">
+    <nav class="navbar  navbar-expand-lg bg-color">
         <div class="container-fluid">
-            <a class="nav-brand text-decoration-none" href="#">
+            <a class="nav-brand text-decoration-none text-warning">
                 <img height="70" src="./assets/img/codoacodo.png" alt="codoacodo">
-                Conf Bs As
+                <span class="fs-5">Conf Bs As</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav text-center">
+                <ul class="navbar-nav nav-underline text-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">La conerencia</a>
+                        <a class="nav-link text-white" aria-current="page" href="#">La conerencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Los oradores</a>
+                        <a class="nav-link text-white" href="#">Los oradores</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link text-white" href="#">El lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">El lugar y la fecha</a>
+                        <a class="nav-link text-white" href="#">Conviertete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Conviertete en orador</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-success fw-bold">Comprar tickets</a>
+                        <a class="nav-link text-success fw-bold" href="#">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header
-        class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative min-vh-100">
+    <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
         <div class="header-card fw-bold">
             <h5 class="fs-2">Conf Bs As</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto aperiam molestiae
@@ -120,7 +119,8 @@
         <section class="d-flex my-5 flex-fill">
             <div class="col-0 col-md-3 "></div>
             <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
-                <legend class="text-center">Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar!</legend>
+                <legend class="text-center">Anotate como orador para dar una charla ignite. Cuentanos de que quieres
+                    hablar!</legend>
                 <form class="d-flex flex-column gap-4 ">
                     <div class="row-cols-12 row-cols-md d-md-flex">
                         <div class="col-md-6 px-md-1">
@@ -141,8 +141,8 @@
             </div>
             <div class="col-0 col-md-3"></div>
         </section>
-        <section class="container-fluid p-0">
-            <ul class="links-info d-flex flex-wrap gap-1 justify-content-between m-0">
+        <section class="container-fluid p-0 py-3 bg-color">
+            <ul class="links-info d-flex flex-wrap gap-1 justify-content-around m-0">
                 <li><a href="#">Preguntas frecuentes</a></li>
                 <li><a href="#">Contáctanos</a></li>
                 <li><a href="#">Prensa</a></li>
