--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     </header>
     <main>
         <article class="article-cards d-flex p-5">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 d-flex justify-content-around">
-                <div class="col col-md-5 col-lg my-2 my-md-5">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 d-flex justify-content-around">
+                <div class="col-8 col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-md-5 col-lg my-2 my-md-5">
+                <div class="col-8 col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/steve.jpg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-md-5 col-lg my-2 my-md-5">
+                <div class="col-8 col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/ada.jpeg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -142,7 +142,7 @@
             <div class="col-0 col-md-3"></div>
         </section>
         <section class="container-fluid p-0 py-3 bg-color">
-            <ul class="links-info d-flex flex-wrap gap-1 justify-content-around m-0">
+            <ul class="links-info d-flex flex-wrap gap-3 justify-content-center justify-content-md-around m-0">
                 <li><a href="#">Preguntas frecuentes</a></li>
                 <li><a href="#">Contáctanos</a></li>
                 <li><a href="#">Prensa</a></li>
