fix: legend, form

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
         <article class="article-cards d-flex p-5">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 d-flex justify-content-around">
-                <div class="col-8 col-md-5 col-lg my-2 my-md-5">
+                <div class="col-10 col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-8 col-md-5 col-lg my-2 my-md-5">
+                <div class="col-10 col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/steve.jpg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-8 col-md-5 col-lg my-2 my-md-5">
+                <div class="col-10 col-md-5 col-lg my-2 my-md-5">
                     <div class="card">
                         <img class="card-img-top" src="./assets/img/ada.jpeg" alt="el maldito Bill Gatos">
                         <div class="card-body">
@@ -119,19 +119,19 @@
         <section class="d-flex my-5 flex-fill">
             <div class="col-0 col-md-3 "></div>
             <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
-                <legend class="text-center">Anotate como orador para dar una charla ignite. Cuentanos de que quieres
+                <legend class="text-center mb-3">Anotate como orador para dar una <a href="#">charla ignite</a>. Cuentanos de que quieres
                     hablar!</legend>
                 <form class="d-flex flex-column gap-4 ">
-                    <div class="row-cols-12 row-cols-md d-md-flex">
-                        <div class="col-md-6 px-md-1">
+                    <div class="row-cols-12 row-cols-md d-md-flex gap-1 px-md-1">
+                        <div class="col-md-6 pb-1 pb-md-0">
                             <input type="text" placeholder="Nombre" class="form-control">
                         </div>
-                        <div class="col-md-6 px-md-1">
+                        <div class="col-md-6 pt-1 pt-md-0">
                             <input type="text" placeholder="Apellido" class="form-control">
                         </div>
                     </div>
                     <div class="row-cols-12 row-cols-md">
-                        <textarea class="form-control" type="text" placeholder="Sobre que quieres hablar"></textarea>
+                        <textarea class="form-control" rows="4" type="text" placeholder="Sobre que quieres hablar"></textarea>
                     </div>
                     <div class="row-cols-12 row-cols-md text-center">
                         <label class="col-12 col-md" for="form-label">Recuerda incluir un titulo para tu charla</label>
