--- a/index.html
+++ b/index.html
@@ -44,16 +44,26 @@
         </div>
     </nav>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div class="header-card fw-bold">
-            <h5 class="fs-2">Conf Bs As</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto aperiam molestiae
-                aspernatur cumque aliquam tempore provident, suscipit ipsam magnam sapiente accusamus non. Quibusdam eos
-                dolores laudantium officiis, unde enim iusto deserunt sequi explicabo, debitis repudiandae natus amet
-                officia nisi.</p>
-            <div>
-                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                <button type="button" class="btn btn-success">Comprar ticket</button>
+        <div id="carouselExample" class="carousel slide carousel-fade" style="height: 80vh">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/img/ba1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/ba2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/ba3.jpg" class="d-block w-100" alt="...">
+                </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </header>
     <main>
@@ -119,7 +129,8 @@
         <section class="d-flex my-5 flex-fill">
             <div class="col-0 col-md-3 "></div>
             <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
-                <legend class="text-center mb-3">Anotate como orador para dar una <a href="#">charla ignite</a>. Cuentanos de que quieres
+                <legend class="text-center mb-3">Anotate como orador para dar una <a href="#">charla ignite</a>.
+                    Cuentanos de que quieres
                     hablar!</legend>
                 <form class="d-flex flex-column gap-4 ">
                     <div class="row-cols-12 row-cols-md d-md-flex gap-1 px-md-1">
@@ -131,7 +142,8 @@
                         </div>
                     </div>
                     <div class="row-cols-12 row-cols-md">
-                        <textarea class="form-control" rows="4" type="text" placeholder="Sobre que quieres hablar"></textarea>
+                        <textarea class="form-control" rows="4" type="text"
+                            placeholder="Sobre que quieres hablar"></textarea>
                     </div>
                     <div class="row-cols-12 row-cols-md text-center">
                         <label class="col-12 col-md" for="form-label">Recuerda incluir un titulo para tu charla</label>
