--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div>
     </nav>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div id="carouselExample" class="carousel slide carousel-fade" style="height: 80vh">
-            <div class="carousel-inner">
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner h-auto object-fit-contain ">
                 <div class="carousel-item active">
-                    <img src="./assets/img/ba1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/ba1.jpg" class="d-block w-100" alt="catedra">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/ba2.jpg" class="d-block w-100" alt="restaurante">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba3.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/ba3.jpg" class="d-block w-100" alt="obelisco">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -65,6 +65,16 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="position-absolute header-card fw-bold">
+            <h5 class="fs-2">Conf Bs As</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto aperiam molestiae
+                aspernatur cumque aliquam tempore provident, suscipit ipsam magnam sapiente accusamus non. Quibusdam eos
+                dolores laudantium officiis, unde enim iusto deserunt sequi explicabo, debitis repudiandae natus amet
+                officia nisi.</p>
+            <div>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-success">Comprar ticket</button>
+            </div>
     </header>
     <main>
         <article class="article-cards d-flex p-5">
