--- a/index.html
+++ b/index.html
@@ -44,26 +44,18 @@
         </div>
     </nav>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner h-auto object-fit-contain ">
+        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-25" data-bs-ride="carousel">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/ba1.jpg" class="d-block w-100" alt="catedra">
+                    <img src="./assets/img/ba1.jpg" class="" alt="catedra">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba2.jpg" class="d-block w-100" alt="restaurante">
+                    <img src="./assets/img/ba2.jpg" class="" alt="restaurante">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba3.jpg" class="d-block w-100" alt="obelisco">
+                    <img src="./assets/img/ba3.jpg" class="" alt="obelisco">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
         <div class="position-absolute header-card fw-bold">
             <h5 class="fs-2">Conf Bs As</h5>
