fix:  styles carousel

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
     </nav>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-25" data-bs-ride="carousel">
-            <div class="carousel-inner">
+        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-25 h-100 w-100" data-bs-ride="carousel">
+            <div class="carousel-inner object-fit-cover w-100 h-100">
                 <div class="carousel-item active">
                     <img src="./assets/img/ba1.jpg" class="" alt="catedra">
                 </div>
