fix: carousel styles

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div>
     </nav>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-25 h-100 w-100" data-bs-ride="carousel">
-            <div class="carousel-inner object-fit-cover w-100 h-100">
+        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-25 w-100" style="height: 90vh" data-bs-ride="carousel">
+            <div class="carousel-inner w-100 h-100">
                 <div class="carousel-item active">
-                    <img src="./assets/img/ba1.jpg" class="" alt="catedra">
+                    <img src="./assets/img/ba1.jpg"  alt="catedra">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba2.jpg" class="" alt="restaurante">
+                    <img src="./assets/img/ba2.jpg"  alt="restaurante">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba3.jpg" class="" alt="obelisco">
+                    <img src="./assets/img/ba3.jpg"  alt="obelisco">
                 </div>
             </div>
         </div>
