--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
                         <a class="nav-link text-white" href="#">Conviertete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success fw-bold" href="#">Comprar tickets</a>
+                        <a class="nav-link text-success fw-bold" onclick="comprarTicket()" href="#">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div id="list" class="d-flex flex-column gap-3"></div>
+    <template id="templateTicket">
+          <div class="rounded-2 border-1 bg-primary p-5 w-25 ">
+          </div>
+    </template>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
         <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-50 w-100" style="height: 90vh" data-bs-ride="carousel">
             <div class="carousel-inner w-100 h-100">
@@ -170,6 +175,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+        <script src="./main.js"></script>
 </body>
 
 </html>
