--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar  navbar-expand-lg bg-color">
         <div class="container-fluid">
             <a class="nav-brand text-decoration-none text-warning">
-                <img height="70" src="./assets/img/codoacodo.png" alt="codoacodo">
+                <img id="homeInterfaz" height="70" src="./assets/img/codoacodo.png" alt="codoacodo">
                 <span class="fs-5">Conf Bs As</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,7 +37,7 @@
                         <a class="nav-link text-white" href="#">Conviertete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success fw-bold" onclick="comprarTicket()" href="#">Comprar tickets</a>
+                        <a id="ticketInterfaz" class="nav-link text-success fw-bold" href="#">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
