create: toggle contetn main, form tickets

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </aside>
     </main>
     <footer class="d-flex flex-column justify-content-between">
-        <section class="d-flex my-5 flex-fill">
+        <section id="footerForm" class="d-flex my-5 flex-fill">
             <div class="col-0 col-md-3 "></div>
             <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
                 <legend class="text-center mb-3">Anotate como orador para dar una <a href="#">charla ignite</a>.
