--- a/index.html
+++ b/index.html
@@ -160,30 +160,42 @@
                     </span>
                 </div>
                 <h2>VALOR DEL TICKET $</h2>
-                <form class="row col-12 col-md-8 row-gap-4 ">
-                    <div class="col-12 col-md-6 form-floating">
-                        <label for="input" class="label-form">Nombre</label>
-                        <input type="text" class="form-control">
+                <form class="container-sm">
+                    <div class="row row-cols-md-2">
+                        <div class="col-12 form-floating mb-3">
+                            <input type="text" id="floatingInput" class="form-control">
+                            <label for="floatingInput">Nombre</label>
+                        </div>
+                        <div class="col-12 form-floating">
+                            <input type="text" id="floatingInput" class="form-control">
+                            <label for="floatingInput" >Apellido</label>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 form-floating">
-                        <label for="input" class="label-form">Apellido</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="col-12 form-floating">
+                    <div class="col form-floating my-3">
+                        <input type="email" id="floatingInput" class="form-control">
                         <label for="" class="form-label">correo</label>
-                        <input type="text" class="form-control">
                     </div>
-                    <div class="col-12 col-md-6">
-                        <label for="" class="form-label">Cantidad</label>
-                        <input type="text" class="form-control">
+                    <div class="row row-col-2">
+                        <div class="col">
+                            <label for="" class="form-label">Cantidad</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="col">
+                            <label for="" class="form-label">Categoria</label>
+                            <select type="text" class="form-select">
+                                <option value="estudiante">Estudiante</option>
+                                <option value="trainee">Trainee</option>
+                                <option value="junior">Junior</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6">
-                        <label for="" class="form-label">Categoria</label>
-                        <select type="text" class="form-select">
-                            <option value="estudiante">Estudiante</option>
-                            <option value="trainee">Trainee</option>
-                            <option value="junior">Junior</option>
-                        </select>
+                    <div class="input-group col my-4">
+                        <span class="input-group-text">$</span>
+                        <input type="text" placeholder="total :" class="form-control bg-primary-subtle">
+                    </div>
+                    <div class="row row-cols-3 justify-content-around">
+                        <button type="submit" class="btn btn-success ">Borrar</button>
+                        <button type="submit" class="btn btn-success">Borrar</button>
                     </div>
                 </form>
             </section>
