create and quit card info

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </main>
     <section id="ticketMain"></section>
     <template id="templateFormTicket">
-        <main id="templateMain" class="hidden position-relative">
+        <div id="templateMain" class="hidden">
             <section class="d-flex flex-column align-items-center section-container py-5">
                 <div class="d-flex flex-column align-items-center">
                     <div class="d-flex flex-column flex-md-row gap-3">
@@ -197,7 +197,7 @@
                     </div>
                 </form>
             </section>
-        </main>
+        </div>
         </div>
     </template>
     <footer class="d-flex flex-column justify-content-between">
