--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
     </header>
     <main>
         <article>
-            <div class="article-cards d-flex p-5">
+            <div class="article-cards d-flex flex-column align-items-center p-5">
+                <div class="text-center">
+                    conoce a los
+                    <h3 class="fs-1">ORADORES</h3>
+                </div>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 d-flex justify-content-around">
                     <div class="col-10 col-md-5 col-lg my-2 my-md-5">
                         <div class="card">
